--- a/index.html
+++ b/index.html
@@ -35,21 +35,14 @@
             </div>
             <div id="aboutme-section">
                 <h2>Jessica Hek</h2>
-                <p>I'm a communications specialist, aspiring developer and artist. I create accessible and easy to read web content.</p>
+                <p>I'm a communications specialist and aspiring developer. I create accessible and easy to read web content.</p>
                 <p>My career started with the Western Australia Police Force in 2007. I developed knowledge bases and web content before moving into a policy development role. My content was designed for both corporate and operational policing purposes, such as emergency management and incident response.</p>
-                <p>In 2021 I joined the Department of Education as a Senior Consultant Intranet Services within the Communications and Media directorate. I worked within our COVID-19 Incident Management Team for six months, creating internal and external communications for the department. In November 2022, I moved into the role of Senior Consultant Stakeholder Engagement within the Communications and Media directorate.</p>
-                <h2>Coding languages</h2>
+                <p>In 2021 I joined the Department of Education as a Senior Consultant Intranet Services within the Communications and Media directorate. I worked within our COVID-19 Incident Management Team for six months, creating internal and external communications for the department.</p>
+                <p>I am currently learning:</p>
                 <ul>
-                    <li>HTML5</li>
+                    <li>HTML</li>
                     <li>CSS</li>
                     <li>Lua</li>
-                </ul>
-                <h2>Software</h2>
-                <ul>
-                    <li>Atlassian Jira</li>
-                    <li>Liferay</li>
-                    <li>Adobe RoboHelp</li>
-                    <li>Madcap Flare</li>
                 </ul>
             </div>
         </section>
