Fixed media query on flappy-pig project and index

--- a/flappy-pig.html
+++ b/flappy-pig.html
@@ -27,13 +27,10 @@
     </header>
     <main>
         <h1>Flappy pig</h1>
-    <section>
-        <div>
+    <section class="tablet-section">
+        <div class="mobile-div">
             <h2>Game play</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/9Mwzu6QFaTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h2>Assets</h2>
-            <img src="" alt="Game assets including background, pig, pause screen, pipes, ground and trees">
-            <p>All assets were created using Aseprite.</p>
+            <iframe src="https://www.youtube.com/embed/9Mwzu6QFaTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div>
             <h2>Brief</h2>
