--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
         <h1>About me</h1>
-        <section id="about-me-mobile">
+        <section class="mobile-section">
             <div id="profile-img-resume">
                 <img id="profile-img" src="images/me.jpg" alt="profile">
                 <a href="images/Jessica-Hek-resume.pdf" download target="_blank">Download my resume</a>
