fixed tablet size media query for flappy pig

--- a/flappy-pig.html
+++ b/flappy-pig.html
@@ -32,7 +32,7 @@
             <h2>Game play</h2>
             <iframe src="https://www.youtube.com/embed/9Mwzu6QFaTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div>
+        <div class="description-section">
             <h2>Brief</h2>
             <p>Explanation of game brief... Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget aliquet nibh praesent tristique magna sit amet purus. Sed arcu non odio euismod lacinia. Turpis egestas integer eget aliquet nibh praesent tristique. Lectus nulla at volutpat diam ut venenatis. Facilisi cras fermentum odio eu feugiat. Felis imperdiet proin fermentum leo vel orci. Malesuada proin libero nunc consequat interdum varius sit. Sem nulla pharetra diam sit amet nisl. Fames ac turpis egestas maecenas pharetra convallis posuere morbi leo. Proin nibh nisl condimentum id venenatis a condimentum vitae. Adipiscing enim eu turpis egestas pretium aenean. Ultrices tincidunt arcu non sodales. Eu facilisis sed odio morbi. Fermentum dui faucibus in ornare quam viverra.</p>
         </div>
