edited nav link order and projects content

--- a/flappy-pig.html
+++ b/flappy-pig.html
@@ -19,9 +19,9 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="portfolio.html">Projects</a>
+                <a class="contact-me" href="contact.html">Contact me</a>
                 <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-                <a href="contact.html">Contact me</a>
             </nav>
             </section>
     </header>
@@ -34,7 +34,18 @@
         </div>
         <div class="description-section">
             <h2>Brief</h2>
-            <p>Explanation of game brief... Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget aliquet nibh praesent tristique magna sit amet purus. Sed arcu non odio euismod lacinia. Turpis egestas integer eget aliquet nibh praesent tristique. Lectus nulla at volutpat diam ut venenatis. Facilisi cras fermentum odio eu feugiat. Felis imperdiet proin fermentum leo vel orci. Malesuada proin libero nunc consequat interdum varius sit. Sem nulla pharetra diam sit amet nisl. Fames ac turpis egestas maecenas pharetra convallis posuere morbi leo. Proin nibh nisl condimentum id venenatis a condimentum vitae. Adipiscing enim eu turpis egestas pretium aenean. Ultrices tincidunt arcu non sodales. Eu facilisis sed odio morbi. Fermentum dui faucibus in ornare quam viverra.</p>
+            <p>Flappy pig is a farm-themed version of the popular 2013 game, Flappy Bird. The game was developed using Lua and Love2D.</p>
+            <p>I edited the existing code to enhance game play, including:</p>
+            <ul>
+                <li>randomising the vertical gap between pipes</li>
+                <li>randomising the spawn time for pipes</li>
+                <li>creating three different medals based on score levels</li>
+                <li>implementing a pause feature that triggers a sound effect when selected.</li>
+            </ul>
+            <p>I created all the assets for this game in Aseprite, and the pause sound effect in Bfxr.</p>
+            <div class="asset-images">
+                
+            </div>
         </div>
     </section>
     </main>
