--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="portfolio.html">Projects</a>
+                <a class="contact-me" href="contact.html">Contact me</a>
                 <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-                <a href="contact.html">Contact me</a>
             </nav>
             </section>
     </header>
