--- a/portfolio.html
+++ b/portfolio.html
@@ -20,25 +20,15 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="portfolio.html">Projects</a>
+                <a class="contact-me" href="contact.html">Contact me</a>
                 <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-                <a href="contact.html">Contact me</a>
             </nav>
             </section>
     </header>
     <main>
         <h1>Projects</h1>
         <section id="portfolio-container">
-            <a class="portfolio" href="flappy-pig.html">
-                <img class="portfolio-image" src="images/flappy-pig.png" alt="Screenshot of flappy pig game start screen">
-                <h2>Flappy pig (2022)</h2>
-                <p>Game, personal project</p>
-            </a>
-            <a class="portfolio" href="flappy-pig.html">
-                <img class="portfolio-image" src="images/flappy-pig.png" alt="Screenshot of flappy pig game start screen">
-                <h2>Flappy pig (2022)</h2>
-                <p>Game, personal project</p>
-            </a>
             <a class="portfolio" href="flappy-pig.html">
                 <img class="portfolio-image" src="images/flappy-pig.png" alt="Screenshot of flappy pig game start screen">
                 <h2>Flappy pig (2022)</h2>
