attempt to include assets in project flappy pig

--- a/flappy-pig.html
+++ b/flappy-pig.html
@@ -43,9 +43,23 @@
                 <li>implementing a pause feature that triggers a sound effect when selected.</li>
             </ul>
             <p>I created all the assets for this game in Aseprite, and the pause sound effect in Bfxr.</p>
+        </div>
+        <!-- <div class="assets">
+            <h2>Assets</h2>
             <div class="asset-images">
-                
-            </div>
+                <a target="_blank" href="images/background.png">
+                    <img src="images/background.png" alt="Pixel art background image of farm with rolling hills">
+                </a>
+                <a target="_blank" href="images/bird.png">
+                    <img src="images/bird.png" alt="Pixel art of a pig with wings">
+                </a>
+                <a target="_blank" href="images/pipe.png">
+                    <img src="images/pipe.png" alt="Pixel art of a long wooden crate">
+                </a>
+                <a target="_blank" href="images/pauseapple.png">
+                    <img src="images/pauseapple.png" alt="Pixel art of a red apple">
+                </a>
+            </div> -->
         </div>
     </section>
     </main>
