changed 'home' to 'about me'

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
             </div>
             </a>
             <nav>
-                <a href="index.html">Home</a>
+                <a href="index.html">About me</a>
                 <a href="portfolio.html">Projects</a>
                 <a class="contact-me" href="contact.html">Contact me</a>
                 <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
