added formspree url to contact form action

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <h1>Contact me</h1>
-    <form action="" method="post">
+    <form action="https://formspree.io/f/mlevlabp" method="post">
         <div class="form-container">
             <div class="form-item">
                 <label for="name">Your name:</label>
