created toggle menu for mobile

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
             <p class="header-title">Jessica Hek</p>
         </div>
         </a>
-        <nav>
+        <div class="checkbox">
+        <input type="checkbox" class="openmenu">
+        <nav class="menu">
             <a href="index.html">About me</a>
             <a href="portfolio.html">Projects</a>
             <a class="contact-me" href="contact.html">Contact me</a>
             <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
             <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
         </nav>
+        </div>
         </section>
     </header>
     <main>
