fixed message name on contact form

--- a/contact.html
+++ b/contact.html
@@ -34,19 +34,19 @@
         <div class="form-container">
             <div class="form-item">
                 <label for="name">Your name:</label>
-                <input type="text" id="name" name="name">
+                <input type="text" id="name" name="Name">
             </div>
             <div class="form-item">
                 <label for="mail">Email:</label>
-                <input type="text" id="mail" name="email">
+                <input type="text" id="mail" name="Email">
             </div>
             <div class="form-item">
                 <label for="mobile">Contact number:</label>
-                <input type="text" id="mobile" name="mobile">
+                <input type="text" id="mobile" name="Mobile">
             </div>
             <div class="form-item">
                 <label for="message">Message:</label>
-                <textarea id="message" name="name"></textarea>
+                <textarea id="message" name="Message"></textarea>
             </div>
             <div class="form-item">
                 <button type="submit">Submit</button>
