added hamburger toggle menu to mobile devices

--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
         </div>
         </a>
         <div class="checkbox">
-        <input type="checkbox" class="openmenu">
+            <input type="checkbox" class="openmenu" id="open-menu">
+            <!-- hamburger icon -->
+                <div class="hamburger-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                </div>  
+            <!-- <label for="open-menu">
+                <img src="images/toggle-svg.svg" alt="menu" class="open">
+                <img src="images/cross-svg.svg" alt="close" class="close">
+            </label> -->
         <nav class="menu">
             <a href="index.html">About me</a>
             <a href="portfolio.html">Projects</a>
