--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,12 @@
             </div>
             </a>
             <div class="checkbox">
-                <input type="checkbox" class="openmenu">
+                <input type="checkbox" class="openmenu" id="open-menu">
+                    <div class="hamburger-lines">
+                        <span class="line line1"></span>
+                        <span class="line line2"></span>
+                        <span class="line line3"></span>
+                    </div>  
                 <nav class="menu">
                     <a href="index.html">About me</a>
                     <a href="portfolio.html">Projects</a>
