added extra assets to flappy pig project

--- a/flappy-pig.html
+++ b/flappy-pig.html
@@ -52,7 +52,7 @@
             </ul>
             <p>I created all the assets for this game in Aseprite, and the pause sound effect in Bfxr.</p>
         </div>
-        <!-- <div class="assets">
+        <div class="assets">
             <h2>Assets</h2>
             <div class="asset-images">
                 <a target="_blank" href="images/background.png">
@@ -67,7 +67,19 @@
                 <a target="_blank" href="images/pauseapple.png">
                     <img src="images/pauseapple.png" alt="Pixel art of a red apple">
                 </a>
-            </div> -->
+                <a target="_blank" href="images/barn2.png">
+                    <img src="images/barn2.png" alt="Pixel art of a barn, trees and fence">
+                </a>
+                <a target="_blank" href="images/goldmedal.png">
+                    <img src="images/goldmedal.png" alt="Pixel art of a gold medal">
+                </a>
+                <a target="_blank" href="images/silvermedal.png">
+                    <img src="images/silvermedal.png" alt="Pixel art of a silver medal">
+                </a>
+                <a target="_blank" href="images/bronzemedal.png">
+                    <img src="images/bronzemedal.png" alt="Pixel art of a bronze medal">
+                </a>
+            </div>
         </div>
     </section>
     </main>
