hid unfinished assets code

--- a/flappy-pig.html
+++ b/flappy-pig.html
@@ -52,7 +52,7 @@
             </ul>
             <p>I created all the assets for this game in Aseprite, and the pause sound effect in Bfxr.</p>
         </div>
-        <div class="assets">
+        <!-- <div class="assets">
             <h2>Assets</h2>
             <div class="asset-images">
                 <a target="_blank" href="images/background.png">
@@ -79,7 +79,7 @@
                 <a target="_blank" href="images/bronzemedal.png">
                     <img src="images/bronzemedal.png" alt="Pixel art of a bronze medal">
                 </a>
-            </div>
+            </div> -->
         </div>
     </section>
     </main>
