new profile image, cleaning CSS

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1>About me</h1>
         <section class="mobile-section">
             <div id="profile-img-resume">
-                <img id="profile-img" src="images/me.jpg" alt="profile">
+                <img id="profile-img" src="images/me3.png" alt="profile">
                 <a href="images/Jessica-Hek-resume.pdf" download target="_blank">Download my resume</a>
             </div>
             <div id="aboutme-section">
