added projects to index, more css edits

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,31 +9,26 @@
 </head>
 <body>
     <div class="content-wrapper">
-    <header>
-        <section>
-            <a href="index.html">
-            <div>
-                <img class="logo" src="images/logo.jpg" alt="logo">
-                <p class="header-title">Jessica Hek</p>
-            </div>
-            </a>
+        <header>
+            <section>
+            <!-- hamburger for mobile -->
             <div class="checkbox">
                 <input type="checkbox" class="openmenu" id="open-menu">
                     <div class="hamburger-lines">
                         <span class="line line1"></span>
                         <span class="line line2"></span>
                         <span class="line line3"></span>
-                    </div>  
-                <nav class="menu">
-                    <a href="index.html">About me</a>
-                    <a href="portfolio.html">Projects</a>
-                    <a class="contact-me" href="contact.html">Contact me</a>
-                    <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
-                    <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-                </nav>
-                </div>
+                    </div> 
+            <nav class="menu">
+                <a href="index.html">Home</a>
+                <!-- <a href="portfolio.html">Projects</a> -->
+                <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
+                <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
+                <a class="contact-me" href="contact.html">Contact me</a>
+            </nav>
+            </div>
             </section>
-    </header>
+        </header>
     <main>
         <h1>Projects</h1>
         <section id="portfolio-container">
