--- a/index.html
+++ b/index.html
@@ -8,61 +8,69 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="content-wrapper">
-    <header>
-        <section>
-        <a href="index.html">
-        <div>
-            <img class="logo" src="images/logo.jpg" alt="logo">
-            <p class="header-title">Jessica Hek</p>
-        </div>
-        </a>
-        <div class="checkbox">
-            <input type="checkbox" class="openmenu" id="open-menu">
-            <!-- hamburger icon -->
-                <div class="hamburger-lines">
-                    <span class="line line1"></span>
-                    <span class="line line2"></span>
-                    <span class="line line3"></span>
-                </div>  
-            <!-- <label for="open-menu">
-                <img src="images/toggle-svg.svg" alt="menu" class="open">
-                <img src="images/cross-svg.svg" alt="close" class="close">
-            </label> -->
+    <header class="checkbox">
+        <!-- hamburger for mobile -->
+        <input type="checkbox" class="openmenu" id="open-menu">
+        <div class="hamburger-lines">
+            <span class="line line1"></span>
+            <span class="line line2"></span>
+            <span class="line line3"></span>
+        </div> 
         <nav class="menu">
-            <a href="index.html">About me</a>
-            <a href="portfolio.html">Projects</a>
-            <a class="contact-me" href="contact.html">Contact me</a>
+            <a href="index.html">Home</a>
             <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
             <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
+            <a class="contact-me" href="contact.html">Contact me</a>
         </nav>
-        </div>
-        </section>
     </header>
-    <main>
-        <h1>About me</h1>
-        <section class="mobile-section">
-            <div id="profile-img-resume">
-                <img id="profile-img" src="images/me3.png" alt="profile">
-                <a href="images/Jessica-Hek-resume.pdf" download target="_blank">Download my resume</a>
+    <main class="mobile-section">
+        <h1>Jessica Hek</h1>
+        <!-- ABOUT ME -->
+        <section>
+            <div id="about-me">
+                <img id="profile-img" src="images/me3.png" alt="Profile picture of Jessica Hek">
+                <p>I'm a developer with a background in business process improvement<br/><br/>
+                I currently work for the Department of Education in Western Australia, as a Senior Consultant for the Communications 
+                directorate. I'm also part of the 2022-2023 cohort for She Codes Plus in Perth.</p>
             </div>
-            <div id="aboutme-section">
-                <h2>Jessica Hek</h2>
-                <p>I'm a communications specialist and aspiring developer. I create accessible and easy to read web content.</p>
-                <p>My career started with the Western Australia Police Force in 2007. I developed knowledge bases and web content before moving into a policy development role. My content was designed for both corporate and operational policing purposes, such as emergency management and incident response.</p>
-                <p>In 2021 I joined the Department of Education as a Senior Consultant Intranet Services within the Communications and Media directorate. I worked within our COVID-19 Incident Management Team for six months, creating internal and external communications for the department.</p>
-                <p>I am currently learning:</p>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Lua</li>
-                </ul>
+            <div>
+                <!-- MINI NAV -->
+                <a href="images/Jessica-Hek-resume.pdf" download target="_blank">Download my resume</a>
+                <a class="contact-me" href="contact.html">Contact me</a>
+            </div>
+        </section>
+        <!-- PROJECTS -->
+        <section id="projects">
+            <h2>Projects</h2>
+            <div>
+                <a class="card" href="flappy_pig.html">
+                    <img src="images/flappypig1.PNG" alt="Screenshot of project">
+                    <p>Flappy pig</p>
+                    <p>A 2D game made with Lua and Love2D</p>
+                    <i>Lua</i>
+                    <i>Love2D</i>
+                </a>
+                <a class="card" href="">
+                    <img src="images/flappypig1.PNG" alt="Screenshot of project">
+                    <p>Project 2</p>
+                    <p>Coming soon</p>
+                    <i>HTML</i>
+                    <i>CSS</i>
+                    <i>Python</i>
+                </a>
+                <a class="card" href="">
+                    <img src="images/flappypig1.PNG" alt="Screenshot of project">
+                    <p>Project 3</p>
+                    <p>Coming soon</p>
+                    <i>HTML</i>
+                    <i>CSS</i>
+                    <i>Python</i>
+                </a>
             </div>
         </section>
     </main>
     <footer>
         <p class="footer-text">2022</p>
     </footer>   
-    </div> 
 </body>
 </html>
