dupe css to help with tidy of code

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section id="projects">
             <h2>Projects</h2>
             <div>
-                <a class="card" href="flappy_pig.html">
+                <a class="card" href="flappy-pig.html">
                     <img src="images/flappypig1.PNG" alt="Screenshot of project">
                     <p>Flappy pig</p>
                     <p>A 2D game made with Lua and Love2D</p>
