--- a/contact.html
+++ b/contact.html
@@ -7,26 +7,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="content-wrapper">
-        <header>
-            <section>
+        <header class="checkbox">
             <!-- hamburger for mobile -->
-            <div class="checkbox">
-                <input type="checkbox" class="openmenu" id="open-menu">
-                    <div class="hamburger-lines">
-                        <span class="line line1"></span>
-                        <span class="line line2"></span>
-                        <span class="line line3"></span>
-                    </div> 
+            <input type="checkbox" class="openmenu" id="open-menu">
+            <div class="hamburger-lines">
+                <span class="line line1"></span>
+                <span class="line line2"></span>
+                <span class="line line3"></span>
+            </div> 
             <nav class="menu">
                 <a href="index.html">Home</a>
-                <!-- <a href="portfolio.html">Projects</a> -->
                 <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
                 <a class="contact-me" href="contact.html">Contact me</a>
             </nav>
-            </div>
-            </section>
         </header>
     <main>
         <h1>Contact me</h1>
@@ -57,6 +51,5 @@
     <footer>
         <p class="footer-text">2022</p>
     </footer> 
-    </div>
 </body>
 </html>
