updated resume and cleaned css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div>
                 <!-- MINI NAV -->
-                <a href="images/Jessica-Hek-resume.pdf" download target="_blank">Download my resume</a>
+                <a href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a>
                 <a class="contact-me" href="contact.html">Contact me</a>
             </div>
         </section>
@@ -52,25 +52,25 @@
                 </a>
                 <a class="card" href="">
                     <img src="images/flappypig1.PNG" alt="Screenshot of project">
-                    <p>Project 2</p>
+                    <p>Weather app</p>
                     <p>Coming soon</p>
-                    <i>HTML</i>
-                    <i>CSS</i>
                     <i>Python</i>
                 </a>
                 <a class="card" href="">
                     <img src="images/flappypig1.PNG" alt="Screenshot of project">
-                    <p>Project 3</p>
+                    <p>Crowdfunding API</p>
                     <p>Coming soon</p>
+                    <i>Django</i>
+                    <i>Django Rest Framework</i>
+                    <i>Javascript</i>
+                    <i>React</i>
                     <i>HTML</i>
                     <i>CSS</i>
-                    <i>Python</i>
                 </a>
             </div>
         </section>
     </main>
     <footer>
-        <p class="footer-text">2022</p>
     </footer>   
 </body>
 </html>
