--- a/flappy-pig.html
+++ b/flappy-pig.html
@@ -7,70 +7,40 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-        <header class="checkbox">
-            <!-- hamburger for mobile -->
-            <input type="checkbox" class="openmenu" id="open-menu">
-            <div class="hamburger-lines">
-                <span class="line line1"></span>
-                <span class="line line2"></span>
-                <span class="line line3"></span>
-            </div> 
-            <nav class="menu">
-                <a href="index.html">Home</a>
-                <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
-                <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-                <a class="contact-me" href="contact.html">Contact me</a>
-            </nav>
-        </header>
+    <header class="checkbox">
+        <!-- hamburger for mobile -->
+        <input type="checkbox" class="openmenu" id="open-menu">
+        <div class="hamburger-lines">
+            <span class="line line1"></span>
+            <span class="line line2"></span>
+            <span class="line line3"></span>
+        </div> 
+        <nav class="menu">
+            <a href="index.html">Home</a>
+            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
+            <a class="contact-me" href="contact.html">Contact me</a>
+        </nav>
+    </header>
     <main>
         <h1>Flappy pig</h1>
-    <section class="tablet-section">
-        <div class="mobile-div">
-            <h2>Game play</h2>
-            <iframe src="https://www.youtube.com/embed/9Mwzu6QFaTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        <div class="description-section">
-            <h2>Brief</h2>
-            <p>Flappy pig is a farm-themed version of the popular 2013 game, Flappy Bird. The game was developed using Lua and Love2D.</p>
-            <p>I edited the existing code to enhance game play, including:</p>
-            <ul>
-                <li>randomising the vertical gap between pipes</li>
-                <li>randomising the spawn time for pipes</li>
-                <li>creating three different medals based on score levels</li>
-                <li>implementing a pause feature that triggers a sound effect when selected.</li>
-            </ul>
-            <p>I created all the assets for this game in Aseprite, and the pause sound effect in Bfxr.</p>
-        </div>
-        <!-- <div class="assets">
-            <h2>Assets</h2>
-            <div class="asset-images">
-                <a target="_blank" href="images/background.png">
-                    <img src="images/background.png" alt="Pixel art background image of farm with rolling hills">
-                </a>
-                <a target="_blank" href="images/bird.png">
-                    <img src="images/bird.png" alt="Pixel art of a pig with wings">
-                </a>
-                <a target="_blank" href="images/pipe.png">
-                    <img src="images/pipe.png" alt="Pixel art of a long wooden crate">
-                </a>
-                <a target="_blank" href="images/pauseapple.png">
-                    <img src="images/pauseapple.png" alt="Pixel art of a red apple">
-                </a>
-                <a target="_blank" href="images/barn2.png">
-                    <img src="images/barn2.png" alt="Pixel art of a barn, trees and fence">
-                </a>
-                <a target="_blank" href="images/goldmedal.png">
-                    <img src="images/goldmedal.png" alt="Pixel art of a gold medal">
-                </a>
-                <a target="_blank" href="images/silvermedal.png">
-                    <img src="images/silvermedal.png" alt="Pixel art of a silver medal">
-                </a>
-                <a target="_blank" href="images/bronzemedal.png">
-                    <img src="images/bronzemedal.png" alt="Pixel art of a bronze medal">
-                </a>
-            </div> -->
-        </div>
-    </section>
+        <section>
+            <div>
+                <h2>Game play</h2>
+                <iframe src="https://www.youtube.com/embed/9Mwzu6QFaTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div>
+                <h2>Brief</h2>
+                <p>Flappy pig is a farm-themed version of the popular 2013 game, Flappy Bird. The game was developed using Lua and Love2D.</p>
+                <p>I edited the existing code to enhance game play, including:</p>
+                <ul>
+                    <li>randomising the vertical gap between pipes</li>
+                    <li>randomising the spawn time for pipes</li>
+                    <li>creating three different medals based on score levels</li>
+                    <li>implementing a pause feature that triggers a sound effect when selected.</li>
+                </ul>
+                <p>I created all the assets for this game in Aseprite, and the pause sound effect in Bfxr.</p>
+        </section>
     </main>
     <footer>
         <p class="footer-text">2022</p>
