--- a/index.html
+++ b/index.html
@@ -26,15 +26,11 @@
     <main class="mobile-section">
         <h1>Jessica Hek</h1>
         <!-- ABOUT ME -->
-        <section>
-            <div id="about-me">
-                <img id="profile-img" src="images/me3.png" alt="Profile picture of Jessica Hek">
-                <p>I'm a developer with a background in business process improvement<br/><br/>
-                I currently work for the Department of Education in Western Australia, as a Senior Consultant for the Communications 
-                directorate. I'm also part of the 2022-2023 cohort for She Codes Plus in Perth.</p>
-            </div>
-            <div>
-                <!-- MINI NAV -->
+        <section id="about-me">
+            <img id="profile-img" src="images/me3.png" alt="Profile picture of Jessica Hek">
+            <div id="mini-nav">
+                <p>I'm a developer with a background in business process improvement.<br/><br/>
+                I live in Perth, Western Australia and I'm currently part of the She Codes Plus cohort for 2022 - 2023.</p>
                 <a href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a>
                 <a class="contact-me" href="contact.html">Contact me</a>
             </div>
