added portfolio project and fixed projects css

--- a/flappy-pig.html
+++ b/flappy-pig.html
@@ -24,23 +24,25 @@
     </header>
     <main>
         <h1>Flappy pig</h1>
+        <section id="projects">
+        <div>
+            <h2>Game play</h2>
+            <iframe src="https://www.youtube.com/embed/9Mwzu6QFaTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
+        </div>
+        <div>
+            <h2>Brief</h2>
+            <p>Flappy Pig is a farm-themed version of the popular 2013 game, Flappy Bird.</p>
+            <p>I was provided source-code as part of Harvards CS50 Introduction to game design course.</p>
+            <p>Using Lua and Love2D, I edited the existing code to enhance game play including:</p>
+            <ul>
+                <li>randomising the vertical gap between pipes</li>
+                <li>randomising the spawn time for pipes</li>
+                <li>creating three different medals based on score levels</li>
+                <li>implementing a pause feature that triggers a sound effect when selected.</li>
+            </ul>
+            <p>I created all the assets for this game in Aseprite, and the pause sound effect in Bfxr.</p>
+        </div>
         <section>
-            <div>
-                <h2>Game play</h2>
-                <iframe src="https://www.youtube.com/embed/9Mwzu6QFaTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
-            </div>
-            <div>
-                <h2>Brief</h2>
-                <p>Flappy pig is a farm-themed version of the popular 2013 game, Flappy Bird. The game was developed using Lua and Love2D.</p>
-                <p>I edited the existing code to enhance game play, including:</p>
-                <ul>
-                    <li>randomising the vertical gap between pipes</li>
-                    <li>randomising the spawn time for pipes</li>
-                    <li>creating three different medals based on score levels</li>
-                    <li>implementing a pause feature that triggers a sound effect when selected.</li>
-                </ul>
-                <p>I created all the assets for this game in Aseprite, and the pause sound effect in Bfxr.</p>
-        </section>
     </main>
     <footer>
     </footer> 
