--- a/portfolio.html
+++ b/portfolio.html
@@ -4,39 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jessica Hek Projects</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="content-wrapper">
-        <header class="checkbox">
-            <!-- hamburger for mobile -->
-            <input type="checkbox" class="openmenu" id="open-menu">
-            <div class="hamburger-lines">
-                <span class="line line1"></span>
-                <span class="line line2"></span>
-                <span class="line line3"></span>
-            </div> 
-            <nav class="menu">
-                <a href="index.html">Home</a>
-                <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
-                <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
-                <a class="contact-me" href="contact.html">Contact me</a>
-            </nav>
-        </header>
+    <header class="checkbox">
+        <!-- hamburger for mobile -->
+        <input type="checkbox" class="openmenu" id="open-menu">
+        <div class="hamburger-lines">
+            <span class="line line1"></span>
+            <span class="line line2"></span>
+            <span class="line line3"></span>
+        </div> 
+        <nav class="menu">
+            <a href="index.html">Home</a>
+            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
+            <a class="contact-me" href="contact.html">Contact me</a>
+        </nav>
+    </header>
     <main>
-        <h1>Projects</h1>
-        <section id="portfolio-container">
-            <a class="portfolio" href="flappy-pig.html">
-                <img class="portfolio-image" src="images/flappy-pig.png" alt="Screenshot of flappy pig game start screen">
-                <h2>Flappy pig (2022)</h2>
-                <p>Game, personal project</p>
-            </a>
-        </section>
+        <h1>My portfolio</h1>
+        <section id="projects">
+        <div>
+            <h2>Wireframe</h2>
+            <img src="screenshots/20221016_090013.jpg" alt="Draft wireframe for this portfolio"></iframe>
+        </div>
+        <div>
+            <h2>Brief</h2>
+            <p>This is the first project I completed as part of the She Codes Plus program in 2022.</p>
+            <p>I started by drafting a wireframe to get the structure of my portfolio. I used HTMl and 
+                CSS to create the portfolio in Visual Studio Code and published it to GitHub.</p>
+            <p>This portfolio is responsive and includes a bio, contact form, and links to coding projects.</p>
+            <p>You can view the code on <a href="https://github.com/what-the-hek/what-the-hek.github.io">GitHub</a>.</p>
+        </div>
+        <section>
     </main>
     <footer>
-        <p class="footer-text">2022</p>
     </footer> 
-    </div>
 </body>
 </html>
