--- a/index.html
+++ b/index.html
@@ -29,39 +29,41 @@
         <section id="about-me">
             <img id="profile-img" src="images/me3.png" alt="Profile picture of Jessica Hek">
             <div id="mini-nav">
-                <p>I'm a developer with a background in business process improvement.<br/><br/>
+                <p>I'm a full stack developer with a background in business process improvement.<br/><br/>
                 I live in Perth, Western Australia and I'm currently part of the She Codes Plus cohort for 2022 - 2023.</p>
                 <a href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a>
                 <a class="contact-me" href="contact.html">Contact me</a>
             </div>
         </section>
         <!-- PROJECTS -->
-        <section id="projects">
+        <section id="projects-section">
             <h2>Projects</h2>
             <div>
                 <a class="card" href="flappy-pig.html">
-                    <img src="images/flappypig1.PNG" alt="Screenshot of project">
-                    <p>Flappy pig</p>
-                    <p>A 2D game made with Lua and Love2D</p>
+                    <img src="images/flappypig1.PNG" alt="Screenshot of flappy pig game">
+                    <p class="card-title">Flappy pig</p>
+                    <p>A 2D farm-themed game based on the 2013 game, Flappy Bird</p>
                     <i>Lua</i>
                     <i>Love2D</i>
                 </a>
+                <a class="card" href="portfolio.html">
+                    <img src="images/portfolio.jpg" alt="Screenshot of portfolio home page">
+                    <p class="card-title">My portfolio</p>
+                    <p>This online portfolio, created during the She Codes Plus program</p>
+                    <i>HTML</i>
+                    <i>CSS</i>
+                </a>
                 <a class="card" href="">
-                    <img src="images/flappypig1.PNG" alt="Screenshot of project">
-                    <p>Weather app</p>
+                    <img src="images/coming-soon.jpg" alt="Screenshot of project">
+                    <p class="card-title">Weather app</p>
                     <p>Coming soon</p>
                     <i>Python</i>
                 </a>
                 <a class="card" href="">
-                    <img src="images/flappypig1.PNG" alt="Screenshot of project">
-                    <p>Crowdfunding API</p>
-                    <p>Coming soon</p>
-                    <i>Django</i>
+                    <img src="images/coming-soon.jpg" alt="Screenshot of project">
+                    <p class="card-title">Crowdfunding API</p>
                     <i>Django Rest Framework</i>
-                    <i>Javascript</i>
-                    <i>React</i>
-                    <i>HTML</i>
-                    <i>CSS</i>
+                    <i>JavaScript React</i>
                 </a>
             </div>
         </section>
