fixed responsive CSS for mobile

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="contact-me" href="contact.html">Contact me</a>
         </nav>
     </header>
-    <main class="mobile-section">
+    <main>
         <h1>Jessica Hek</h1>
         <!-- ABOUT ME -->
         <section id="about-me">
@@ -44,7 +44,6 @@
                     <p class="card-title">Flappy pig</p>
                     <p>A 2D farm-themed game based on the 2013 game, Flappy Bird</p>
                     <i>Lua</i>
-                    <i>Love2D</i>
                 </a>
                 <a class="card" href="portfolio.html">
                     <img src="images/portfolio.jpg" alt="Screenshot of portfolio home page">
@@ -62,13 +61,12 @@
                 <a class="card" href="">
                     <img src="images/coming-soon.jpg" alt="Screenshot of project">
                     <p class="card-title">Crowdfunding API</p>
+                    <p>Coming soon</p>
                     <i>Django Rest Framework</i>
                     <i>JavaScript React</i>
                 </a>
             </div>
         </section>
-    </main>
-    <footer>
-    </footer>   
+    </main>  
 </body>
 </html>
