added extra projects to portfolio

--- a/index.html
+++ b/index.html
@@ -52,18 +52,28 @@
                     <i>HTML</i>
                     <i>CSS</i>
                 </a>
-                <a class="card" href="">
-                    <img src="images/coming-soon.jpg" alt="Screenshot of project">
+                <a class="card" href="weather.html">
+                    <img src="images/weather-app.jpg" alt="Hand holding a phone with a weather application open">
                     <p class="card-title">Weather app</p>
-                    <p>Coming soon</p>
+                    <p>An app that processes csv files containing data about the weather, and converts them into meaningful text-based summaries.</p>
                     <i>Python</i>
+                </a>
+                <a class="card" href="news.html">
+                    <img src="images/coming-soon.jpg" alt="Hand holding a phone with a weather application open">
+                    <p class="card-title">News site</p>
+                    <p>A website where people can create an account and post news stories.</p>
+                    <i>Python</i>
+                    <i>Django</i>
+                    <i>HTML</i>
+                    <i>CSS</i>
                 </a>
                 <a class="card" href="">
                     <img src="images/coming-soon.jpg" alt="Screenshot of project">
                     <p class="card-title">Crowdfunding API</p>
-                    <p>Coming soon</p>
+                    <p>This project is in progress, watch this space!</p>
                     <i>Django Rest Framework</i>
-                    <i>JavaScript React</i>
+                    <i>JavaScript</i>
+                    <i>React</i>
                 </a>
             </div>
         </section>
