--- a/weather.html
+++ b/weather.html
@@ -23,19 +23,20 @@
         </nav>
     </header>
     <main>
-        <h1>My portfolio</h1>
+        <h1>Weather app</h1>
         <section id="projects">
         <div>
-            <h2>Wireframe</h2>
-            <img src="screenshots/20221016_090013.jpg" alt="Draft wireframe for this portfolio">
+            <h2>Screenshots</h2>
+            <img src="screenshots/python-feedback.PNG" alt="Screenshot of positive feedback from She Codes Plus lead mentor for python">
+            <img src="screenshots/python-test-results.png" alt="Screenshot of all code passing the tests">
+            <img src="screenshots/python-weather.PNG" alt="Screenshot of some python code from the weather app">
         </div>
         <div>
             <h2>Brief</h2>
-            <p>This is the first project I completed as part of the She Codes Plus program in 2022.</p>
-            <p>I started by drafting a wireframe to get the structure of my portfolio. I used HTMl and 
-                CSS to create the portfolio in Visual Studio Code and published it to GitHub.</p>
-            <p>This portfolio is responsive and includes a bio, contact form, and links to coding projects.</p>
-            <p>You can view the code on <a href="https://github.com/what-the-hek/what-the-hek.github.io">GitHub</a>.</p>
+            <p>This project was my first introduction to python as part of the She Codes Plus program.</p>
+            <p>My task was to process different csv files containing data about the weather, and convert them into meaningful text-based summaries so they can be read by people.</p>
+            <p>I received positive feedback about my python code for this project from the lead python mentor.</p>
+            <p>You can view the full code on <a href="https://github.com/what-the-hek/she-codes-python-weather-project-what-the-hek">GitHub</a>.</p>
         </div>
         <section>
     </main>
