--- a/news.html
+++ b/news.html
@@ -23,19 +23,26 @@
         </nav>
     </header>
     <main>
-        <h1>My portfolio</h1>
+        <h1>News site</h1>
         <section id="projects">
         <div>
-            <h2>Wireframe</h2>
-            <img src="screenshots/20221016_090013.jpg" alt="Draft wireframe for this portfolio">
+            <h2>Screenshots</h2>
+            <img src="screenshots/python-feedback.PNG" alt="Screenshot of positive feedback from She Codes Plus lead mentor for python">
+            <img src="screenshots/python-test-results.png" alt="Screenshot of all code passing the tests">
+            <img src="screenshots/python-weather.PNG" alt="Screenshot of some python code from the weather app">
         </div>
         <div>
             <h2>Brief</h2>
-            <p>This is the first project I completed as part of the She Codes Plus program in 2022.</p>
-            <p>I started by drafting a wireframe to get the structure of my portfolio. I used HTMl and 
-                CSS to create the portfolio in Visual Studio Code and published it to GitHub.</p>
-            <p>This portfolio is responsive and includes a bio, contact form, and links to coding projects.</p>
-            <p>You can view the code on <a href="https://github.com/what-the-hek/what-the-hek.github.io">GitHub</a>.</p>
+            <p>This project was to combine my knowledge of python, HTML, CSS and Django to create a news website.</p>
+            <p>The brief was to create a site that people could use to:</p>
+            <ul>
+                <li>create a user account</li>
+                <li>read news stories</li>
+                <li>create news stories</li>
+                <li>comment on news stories</li>
+                <li>delete news stories.</li>
+            </ul>
+            <p>You can view the full code on <a href="https://github.com/what-the-hek/she-codes-django-news-project-what-the-hek">GitHub</a>.</p>
         </div>
         <section>
     </main>
