added more projects

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <i>Python</i>
                 </a>
                 <a class="card" href="news.html">
-                    <img src="images/coming-soon.jpg" alt="Hand holding a phone with a weather application open">
+                    <img src="screenshots/django-news.png" alt="Screenshot of front page for news site">
                     <p class="card-title">News site</p>
                     <p>A website where people can create an account and post news stories.</p>
                     <i>Python</i>
