--- a/news.html
+++ b/news.html
@@ -27,9 +27,7 @@
         <section id="projects">
         <div>
             <h2>Screenshots</h2>
-            <img src="screenshots/python-feedback.PNG" alt="Screenshot of positive feedback from She Codes Plus lead mentor for python">
-            <img src="screenshots/python-test-results.png" alt="Screenshot of all code passing the tests">
-            <img src="screenshots/python-weather.PNG" alt="Screenshot of some python code from the weather app">
+            <img src="screenshots/django-news.png" alt="Screenshot of front page for news site">
         </div>
         <div>
             <h2>Brief</h2>
@@ -42,7 +40,8 @@
                 <li>comment on news stories</li>
                 <li>delete news stories.</li>
             </ul>
-            <p>You can view the full code on <a href="https://github.com/what-the-hek/she-codes-django-news-project-what-the-hek">GitHub</a>.</p>
+            <p>You can view the full code on <a href="https://github.com/what-the-hek/she-codes-django-news-project-what-the-hek">GitHub</a>
+                and <a href="screenshots/Jess-Hek-Django-Submission.docx" download target="_blank">view more screenshots</a>.</p>
         </div>
         <section>
     </main>
