css changes to media

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
         <!-- PROJECTS -->
         <section id="projects-section">
-            <h2>Projects</h2>
+            <h2>Recent projects</h2>
             <div>
                 <a class="card" href="flappy-pig.html">
                     <img src="images/flappypig1.PNG" alt="Screenshot of flappy pig game">
