re-order new projects

--- a/index.html
+++ b/index.html
@@ -39,11 +39,28 @@
         <section id="projects-section">
             <h2>Recent projects</h2>
             <div>
+                <a class="card" href="crowdfunding.html">
+                    <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium crowdfunding home page">
+                    <p class="card-title">Crowdfunding website</p>
+                    <p>A crowdfunding website aimed at helping people financially recover from family and domestic abuse.</p>
+                    <i>React</i>
+                    <i>JavaScript</i>
+                    <i>Django Rest Framework</i>
+                </a>
                 <a class="card" href="flappy-pig.html">
                     <img src="images/flappypig1.PNG" alt="Screenshot of flappy pig game">
                     <p class="card-title">Flappy pig</p>
                     <p>A 2D farm-themed game based on the 2013 game, Flappy Bird</p>
                     <i>Lua</i>
+                </a>
+                <a class="card" href="news.html">
+                    <img src="screenshots/django-news.png" alt="Screenshot of front page for news site">
+                    <p class="card-title">News site</p>
+                    <p>A website where people can create an account and post news stories.</p>
+                    <i>Python</i>
+                    <i>Django</i>
+                    <i>HTML</i>
+                    <i>CSS</i>
                 </a>
                 <a class="card" href="portfolio.html">
                     <img src="images/portfolio.jpg" alt="Screenshot of portfolio home page">
@@ -57,23 +74,6 @@
                     <p class="card-title">Weather app</p>
                     <p>An app that processes csv files containing data about the weather, and converts them into meaningful text-based summaries.</p>
                     <i>Python</i>
-                </a>
-                <a class="card" href="news.html">
-                    <img src="screenshots/django-news.png" alt="Screenshot of front page for news site">
-                    <p class="card-title">News site</p>
-                    <p>A website where people can create an account and post news stories.</p>
-                    <i>Python</i>
-                    <i>Django</i>
-                    <i>HTML</i>
-                    <i>CSS</i>
-                </a>
-                <a class="card" href="crowdfunding.html">
-                    <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium crowdfunding home page">
-                    <p class="card-title">Crowdfunding API</p>
-                    <p>This project is in progress, watch this space!</p>
-                    <i>Django Rest Framework</i>
-                    <i>JavaScript</i>
-                    <i>React</i>
                 </a>
             </div>
         </section>
