removed h2 from projects, added thumbnails

--- a/crowdfunding.html
+++ b/crowdfunding.html
@@ -26,10 +26,16 @@
         <h1>Crowdfunding website</h1>
         <section id="projects">
         <div>
-            <h2>Screenshots</h2>
-            <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium home page">
-            <img src="screenshots/Healium-projects.png" alt="Screenshot of Healium project cards">
-            <img src="screenshots/Healium-pledge.png" alt="Screenshot of Healium project page with pledge form">
+            <!-- <h2>Screenshots</h2> -->
+            <a href="screenshots/Healium-home-page.png" target="_blank">
+                <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium home page">
+            </a>
+            <a href="screenshots/Healium-projects.png" target="_blank">
+                <img src="screenshots/Healium-projects.png" alt="Screenshot of Healium project cards">
+            </a>
+            <a href="screenshots/Healium-pledge.png" target="_blank">
+                <img src="screenshots/Healium-pledge.png" alt="Screenshot of Healium project page with pledge form">
+            </a>
         </div>
         <div>
             <h2>Brief</h2>
