--- a/news.html
+++ b/news.html
@@ -26,8 +26,10 @@
         <h1>News site</h1>
         <section id="projects">
         <div>
-            <h2>Screenshots</h2>
-            <img src="screenshots/django-news.png" alt="Screenshot of front page for news site">
+            <!-- <h2>Screenshots</h2> -->
+            <a href="screenshots/django-news.png" target="_blank">
+                <img src="screenshots/django-news.png" alt="Screenshot of front page for news site">
+            </a>
         </div>
         <div>
             <h2>Brief</h2>
