--- a/weather.html
+++ b/weather.html
@@ -26,10 +26,16 @@
         <h1>Weather app</h1>
         <section id="projects">
         <div>
-            <h2>Screenshots</h2>
-            <img src="screenshots/python-feedback.PNG" alt="Screenshot of positive feedback from She Codes Plus lead mentor for python">
-            <img src="screenshots/python-test-results.png" alt="Screenshot of all code passing the tests">
-            <img src="screenshots/python-weather.PNG" alt="Screenshot of some python code from the weather app">
+            <!-- <h2>Screenshots</h2> -->
+            <a href="screenshots/python-feedback.PNG" target="_blank">
+                <img src="screenshots/python-feedback.PNG" alt="Screenshot of positive feedback from She Codes Plus lead mentor for python">
+            </a>
+            <a href="screenshots/python-test-results.png" target="_blank">
+                <img src="screenshots/python-test-results.png" alt="Screenshot of all code passing the tests">
+            </a>
+            <a href="screenshots/python-weather.PNG" target="_blank">
+                <img src="screenshots/python-weather.PNG" alt="Screenshot of some python code from the weather app">
+            </a>
         </div>
         <div>
             <h2>Brief</h2>
