--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,10 @@
         <h1>My portfolio</h1>
         <section id="projects">
         <div>
-            <h2>Wireframe</h2>
-            <img src="screenshots/20221016_090013.jpg" alt="Draft wireframe for this portfolio">
+            <!-- <h2>Wireframe</h2> -->
+            <a href="screenshots/20221016_090013.jpg" target="_blank">
+                <img src="screenshots/20221016_090013.jpg" alt="Draft wireframe for this portfolio">
+            </a>
         </div>
         <div>
             <h2>Brief</h2>
