--- a/crowdfunding.html
+++ b/crowdfunding.html
@@ -39,7 +39,7 @@
         </div>
         <div>
             <h2>Brief</h2>
-            <p>Create a corwdfunding website using Django Rest Framework (DRF) for the backend, and JavaScript React for frontend.</p>
+            <p>Create a crowdfunding website using Django Rest Framework (DRF) for the backend, and JavaScript React for frontend.</p>
             <p>I decided to theme the website around people who've experienced family and domestic abuse. I chose this theme based on
                 my background experience in emergency services. </p>
             <p>Some of the features for this website include:</p>
@@ -50,8 +50,8 @@
                 <li>pledge an amount to an existing project</li>
             </ul>
             <p>You can view the full <a href="https://github.com/what-the-hek/crowdfunding">front-end code</a> and 
-                <a href="https://github.com/SheCodesAus/she-codes-crowdfunding-api-project-what-the-hek"> back-end code</a> on GitHub.
-                Visit the <a href="https://keen-gecko-1cbdfe.netlify.app/">Healium</a> website, hosted on Netlify.</p>
+                <a href="https://github.com/SheCodesAus/she-codes-crowdfunding-api-project-what-the-hek"> back-end code</a> on GitHub.</p>
+            <p>Visit the <a href="https://keen-gecko-1cbdfe.netlify.app/">Healium</a> website, hosted on Netlify.</p>
         </div>
         <section>
     </main>
