--- a/jess-hek.html
+++ b/jess-hek.html
@@ -12,6 +12,7 @@
     <main>
         <h1>Jess Hek</h1>
         <section>
+            <img id="profile-img" src="images/me3.png" alt="Profile picture of Jessica Hek">
         <section>
     </main>
     <footer>
